--- a/client/back-office/views/forum.html
+++ b/client/back-office/views/forum.html
@@ -322,7 +322,7 @@
 				<i class="fa fa-copy"></i>
 				 to copy the info!
 			</div>
-			<div class="flex flex-row mt-2">
+			<div class="flex flex-row mt-2 mb-1 mx-4">
 				<button id="showBtn" class="hidden flex btn bg-save p-1 hover:opacity-80 text-white font-bold rounded mr-2"
 					onclick="showFilters()">
 					Show filters
